--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.35.0",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -26,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.1",
+    "supabase": "^2.9.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
